<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#212121"
    android:scrollbars="none">

    <RelativeLayout
        android:id="@+id/fragmentDeux"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/allTheId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tic_tac_toe"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:hint="lists"/>

        <ImageView
            android:id="@+id/replay"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/replay"
            app:srcCompat="@drawable/replay" />

        <ImageView
            android:id="@+id/exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/replay"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/exit_the_fragment"
            app:srcCompat="@drawable/eixt" />

        <LinearLayout
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/redback"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_ninja"
                android:padding="15dp"
                android:layout_gravity="center"
                android:background="@drawable/red_square"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/let_the_game_begin" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/greeting"
            android:layout_centerInParent="true"
            android:text="@string/no_data_received" />


        <TextView
            android:id="@+id/changeMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/greeting"
            android:layout_centerInParent="true"
            android:text="@string/change_mark"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/tic_tac_toe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtData"
            android:layout_marginTop="55dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary">

            <GridLayout
                android:id="@+id/LayoutXO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/black_square"
                android:columnCount="3"
                android:rowCount="3">


                <ImageView
                    android:id="@+id/block_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="4dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="4dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="4dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_7"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_8"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/block_9"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />
            </GridLayout>

    </RelativeLayout>

        <View
            android:id="@+id/set1"
            android:layout_width="220dp"
            android:layout_height="8dp"
            android:layout_marginTop="235dp"
            android:layout_marginLeft="80dp"
            android:background="@android:color/white"
            android:visibility="invisible"/>
        <View
            android:id="@+id/set2"
            android:layout_width="220dp"
            android:layout_height="8dp"
            android:layout_below="@+id/set1"
            android:layout_alignLeft="@+id/set1"
            android:layout_marginTop="55dp"
            android:background="@android:color/white"
            android:visibility="invisible"/>
        <View
            android:id="@+id/set3"
            android:layout_width="220dp"
            android:layout_height="8dp"
            android:layout_below="@+id/set2"
            android:layout_alignLeft="@+id/set2"
            android:layout_marginTop="55dp"
            android:background="@android:color/white"
            android:visibility="invisible"/>


        <View
            android:id="@+id/set4"
            android:layout_width="8dp"
            android:layout_height="220dp"
            android:layout_marginLeft="125dp"
            android:layout_alignBottom="@+id/set5"
            android:background="@android:color/white"
            android:visibility="invisible"/>

        <View
            android:id="@+id/set5"
            android:layout_width="8dp"
            android:layout_height="220dp"
            android:layout_marginTop="205dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            android:visibility="invisible"/>

        <View
            android:id="@+id/set6"
            android:layout_width="8dp"
            android:layout_height="220dp"
            android:layout_alignParentRight="true"
            android:background="@android:color/white"
            android:layout_alignBottom="@id/set5"
            android:layout_marginRight="125dp"
            android:visibility="invisible"/>

        <View
            android:id="@+id/set7"
            android:layout_width="8dp"
            android:layout_height="280dp"
            android:rotation="135"
            android:layout_marginTop="175dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            android:visibility="invisible"/>

        <View
            android:id="@+id/set8"
            android:layout_width="8dp"
            android:layout_height="280dp"
            android:rotation="45"
            android:layout_marginTop="175dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            android:visibility="invisible"/>




    </RelativeLayout>

</ScrollView>

<!-- RelativeLayout Tic-tac-toe board hidden here -->
<!--

        <RelativeLayout
            android:id="@+id/LayoutXO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPlace"
            android:layout_centerHorizontal="true"
            android:background="@drawable/black_square"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/cell1"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/red_square"/>

                <ImageView
                    android:id="@+id/cell2"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square"/>

                <ImageView
                    android:id="@+id/cell3"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/red_square"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:layout_below="@+id/row1">

                <ImageView

                    android:id="@+id/cell6"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/red_square"/>

                <ImageView
                    android:id="@+id/cell5"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square" />

                <ImageView
                    android:id="@+id/cell4"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/red_square"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="13dp"
                android:layout_below="@+id/row2">

                <ImageView
                    android:id="@+id/cell7"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/red_square"/>

                <ImageView
                    android:id="@+id/cell8"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:background="@drawable/red_square"/>

                <ImageView
                    android:id="@+id/cell9"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:padding="5dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/red_square"/>

            </LinearLayout>

        </RelativeLayout> -->
